Исправление API URL для загрузки заявок

--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,7 @@
     <script>
     document.addEventListener('DOMContentLoaded', function() {
         const submissionsContainer = document.getElementById('submissions-container');
-        const apiUrl = '/api/submissions';
+        const apiUrl = 'https://webperekupserver.onrender.com/api/submissions';
         const telegramBotToken = '8277125562:AAHd3QqkhPNR5gFY7kecrvud87sLTeCmF10';
 
         submissionsContainer.innerHTML = '<p class="col-12 text-center">Загрузка заявок...</p>';
