--- a/public/index.html
+++ b/public/index.html
@@ -254,9 +254,29 @@
                             const cardBody = document.createElement('div');
                             cardBody.className = 'card-body';
                             
-                            const photoUrl = submission.file_path 
-							? `https://webperekupserver.onrender.com/api/photo/${submission.file_path}` 
-							: 'https://via.placeholder.com/400x250.png?text=Нет+фото';
+                            let photoUrl;
+if (submission.file_path) {
+    // Проверяем, является ли file_path полной URL-ссылкой от Telegram
+    if (submission.file_path.startsWith('https://api.telegram.org/file/bot')) {
+        // Если да, извлекаем из нее только относительную часть пути
+        const parts = submission.file_path.split('/file/bot');
+        if (parts.length > 1) {
+            const pathWithToken = parts[1];
+            const pathParts = pathWithToken.split('/');
+            // Убираем токен из пути
+            pathParts.shift(); 
+            const relativePath = pathParts.join('/');
+            photoUrl = `https://webperekupserver.onrender.com/api/photo/${relativePath}`;
+        } else {
+            photoUrl = 'https://via.placeholder.com/400x250.png?text=Ошибка+в+пути';
+        }
+    } else {
+        // Если это относительный путь (как и должно быть), используем его напрямую
+        photoUrl = `https://webperekupserver.onrender.com/api/photo/${submission.file_path}`;
+    }
+} else {
+    photoUrl = 'https://via.placeholder.com/400x250.png?text=Нет+фото';
+}
 
                             const img = document.createElement('img');
                             img.src = photoUrl;
