--- a/public/index.html
+++ b/public/index.html
@@ -195,13 +195,13 @@
 
     <!-- Скрипты -->
     <!-- jQuery -->
-    <script src="/node_modules/admin-lte/plugins/jquery/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <!-- Bootstrap 4 -->
-    <script src="/node_modules/admin-lte/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- OverlayScrollbars -->
     <script src="/node_modules/overlayscrollbars/browser/overlayscrollbars.browser.es6.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="/node_modules/admin-lte/dist/js/adminlte.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.2/dist/css/adminlte.min.css" />
 
     <!-- СКРИПТ ДЛЯ ЗАГРУЗКИ ДАННЫХ -->
     <script>
